condition and loop done

--- a/Conditionals and Loops/Reverse of a number.ipynb
+++ b/Conditionals and Loops/Reverse of a number.ipynb
@@ -2,51 +2,60 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8c17da0d",
+   "id": "e2a925d2",
    "metadata": {},
    "source": [
-    "# Sum of Even Numbers\n",
+    "# Reverse of a number\n",
     "\n",
-    "### Given a number N, print sum of all even numbers from 1 to N.\n",
+    "### Write a program to generate the reverse of a given number N. Print the corresponding reverse number.\n",
     "\n",
-    "#### Input Format :\n",
+    "#### Note : If a number has trailing zeros, then its reverse will not include them. For e.g., reverse of 10400 will be 401 instead of 00401.\n",
+    "\n",
+    "\n",
+    "#### Input format :\n",
     "Integer N\n",
     "\n",
-    "#### Output Format :\n",
-    "Required Sum\n",
+    "#### Output format :\n",
+    "Corresponding reverse number\n",
+    "\n",
+    "#### Constraints:\n",
+    "0 <= N < 10^8\n",
     "\n",
     "#### Sample Input 1 :\n",
-    " 6\n",
-    " \n",
+    "1234\n",
+    "\n",
     "#### Sample Output 1 :\n",
-    "12"
+    "4321\n",
+    " \n",
+    "#### Sample Input 2 :\n",
+    "1980\n",
+    "#### Sample Output 2 :\n",
+    "891"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f3578c58",
+   "id": "a63ab369",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n",
-      "12\n"
+      "8910\n",
+      "198\n"
      ]
     }
    ],
    "source": [
-    "# code here\n",
+    "# Code Here\n",
     "n = int(input())\n",
-    "sum = 0\n",
-    "count = 1\n",
-    "while count <= n:\n",
-    "    if count%2 == 0:\n",
-    "        sum = sum+count\n",
-    "    count = count+1\n",
-    "print(sum)"
+    "rev = 0\n",
+    "while n>0:\n",
+    "    rev = (rev*10)+n%10\n",
+    "    n = n//10\n",
+    "print(rev)"
    ]
   }
  ],
