--- a/Pattern 1/Triangle Number Pattern.ipynb
+++ b/Pattern 1/Triangle Number Pattern.ipynb
@@ -2,48 +2,61 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "247012ed",
+   "id": "90c00e0d",
    "metadata": {},
    "source": [
-    "# Square Pattern\n",
+    "# Triangle Number Pattern\n",
     "\n",
     "### Print the following pattern for the given N number of rows.\n",
-    "#### Pattern for N = 4\n",
-    "4444\n",
-    "4444\n",
-    "4444\n",
-    "4444\n",
     "\n",
     "#### Input format :\n",
-    "Integer N (Total no. of rows)\n",
+    "#### Integer N (Total no. of rows)\n",
     "\n",
     "#### Output format :\n",
-    "Pattern in N lines\n",
+    "#### Pattern in N lines\n",
     "\n",
-    "#### Constraints:\n",
+    "#### Constraints\n",
     "0 <= N <= 50\n",
     "\n",
     "#### Sample Input 1:\n",
-    "7\n",
+    "4\n",
     "#### Sample Output 1:\n",
-    "7777777\n",
-    "7777777\n",
-    "7777777\n",
-    "7777777\n",
-    "7777777\n",
-    "7777777\n",
-    "7777777\n",
-    "\n",
-    "#### Sample Input 1:\n",
-    "6\n",
-    "\n",
-    "#### Sample Output 1:\n",
-    "666666\n",
-    "666666\n",
-    "666666\n",
-    "666666\n",
-    "666666\n",
-    "666666\n"
+    "#### 1\n",
+    "#### 22\n",
+    "#### 333\n",
+    "#### 4444\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b735c80d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "1\n",
+      "22\n",
+      "333\n",
+      "4444\n"
+     ]
+    }
+   ],
+   "source": [
+    "# code here \n",
+    "n = int(input())\n",
+    "i = 1\n",
+    "while i <= n:\n",
+    "    j = 1\n",
+    "    while j<=i:\n",
+    "        print(i,end='')\n",
+    "        j=j+1\n",
+    "    print()\n",
+    "    i=i+1"
    ]
   }
  ],
